# spec-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-notes-v0.2.6.txt  requirements.txt
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: pipeline.yml  publish-pypi.yml  specguard-pr-review.yml
cli/: __init__.py  specguard.py
develop/pr_review_smoke/: notes_service.py
docs/: ci-and-pr-gates.md  cli-reference.md  codex-plugin.md  core-reviews.md  deep-discovery.md  development.md  language-support.md  plugin-result-contract.md  readiness-rules.md  setup-to-user-flow.md  spec-driven-benchmark.md  uvx-support-plan.md  workflow-code-audit.md  workflow.md
docs/benchmark-results/: specguard-gate-only-v0.3.1.json  specguard-gate-only-v0.3.2.json  specguard-gate-only-v0.4.0.json  specguard-impact-v0.3.0.json
example/: constitution.md  discovery.md  plan.md  spec.md  tasks.md  technical-design.md
example/checklists/: spec-readiness.md
example/contracts/: openapi.yaml
example/tests/: verification-contract.md
examples/example/: discovery.md  grill.json  grill.md  implementation-output.md  readiness-review.json  readiness-review.md  technical-design.md
examples/example/contracts/: openapi.yaml
examples/risk/todo-api/: discovery.md  (+5 more)
examples/simple-auth/: design.md  discovery.md  grill.md  implementation-output.md  readiness-review.json  readiness-review.md  spec.md  technical-design.md
examples/todo-api/: design.md  spec.md
examples/user-auth/: discovery.md  grill.json  grill.md
plugins/specguard/: README.md
specs/example/: discovery.md  grill.json  grill.md  implementation-output.md  spec.md
specs/pr-review-smoke/: discovery.md  implementation-output.md  readiness-review.json  spec.md  technical-design.md
specs/user-auth/: design.md  discovery.md  grill.json  grill.md  implementation-output.md  spec.md  technical-design.md
templates/: design-template.md  discovery-template.md  grill-template.md  readiness-review-template.md  spec-template.md  technical-design-template.md  test-template.md
tests/: test_actions.py  test_benchmark_metadata.py  test_cli_help.py  test_packaging.py  test_pipeline.py  test_plugin_result_contract.py  test_pr_readiness_gate.py  test_pr_review.py  test_readiness_calibration.py  test_specguard_plugin_workflow.py  test_ux.py
tools/: __init__.py  action_installer.py  artifact_generator.py  contract_checker.py  discovery_engine.py  grill_engine.py  llm_client.py  post_run.py  pr_readiness_gate.py  pr_review.py  progress.py  readiness_engine.py  result.py  runner.py  spec_driven_ai_benchmark.py  spec_validator.py  strict_e2e.py  tdd_generator.py  ux.py  verification_checker.py
(+27 files in other folders)
