[project]
name = "spec-guard"
version = "0.1.0"
description = "Spec-driven guardrails for AI development."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "SpecGuard contributors" }
]

[project.scripts]
specguard = "cli.specguard:main"

[tool.setuptools]
packages = ["cli", "tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
