[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-guard"
version = "0.2.2"
description = "Validation-first workflow for AI-assisted development."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "SpecGuard contributors" }
]
keywords = [
  "ai-assisted-development",
  "cli",
  "codex",
  "developer-tools",
  "llm",
  "openapi",
  "spec-driven-development",
  "validation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

[project.optional-dependencies]
test = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
specguard = "cli.specguard:main"

[project.urls]
Homepage = "https://github.com/KoreaNirsa/spec-guard"
Repository = "https://github.com/KoreaNirsa/spec-guard"
Issues = "https://github.com/KoreaNirsa/spec-guard/issues"

[tool.setuptools]
include-package-data = true
packages = [
  "cli",
  "tools",
  "tools.resources",
  "tools.resources.example",
  "tools.resources.example.checklists",
  "tools.resources.example.contracts",
  "tools.resources.example.tests",
  "tools.resources.workflows",
]

[tool.setuptools.package-data]
tools = [
  "resources/example/*.md",
  "resources/example/checklists/*.md",
  "resources/example/contracts/*.yaml",
  "resources/example/tests/*.md",
  "resources/workflows/*.yml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
